# gut

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  knowledge-transfer.md  now.pasta  roadmap.md
lib/apennines/c/: addr.c  asn1_der.c  base.c  bigint.c  buf.c  cipher.c  ct.c  deflate.c  diff.c  dns.c  ec.c  ecdsa.c  entropy.c  hash.c  http.c  http_client.c  https_client.c  json.c  jwks.c  jwt.c  oauth2.c  oauth2_client.c  oidc.c  pem.c  pki.c  rsa.c  secret.c  ssh.c  ssh_known_hosts.c  tcp.c  tls.c  uds.c  ws.c  x509.c  zlib_wrap.c
lib/apennines/h/apennines/: addr.h  asn1_der.h  base.h  bigint.h  buf.h  cipher.h  compress.h  ct.h  diff.h  dns.h  ec.h  ecdsa.h  entropy.h  hash.h  http.h  http_client.h  https_client.h  json.h  jwks.h  jwt.h  oauth2.h  oauth2_client.h  oidc.h  pem.h  pki.h  rsa.h  secret.h  ssh.h  ssh_known_hosts.h  tcp.h  tls.h  uds.h  ws.h  x509.h  zlib_wrap.h
src/main/c/: config.c  cred_helper.c  delta.c  diff.c  ignore.c  index.c  known_hosts.c  leech.c  login.c  main.c  object.c  odb.c  oid.c  pack.c  remote.c  remote_ssh.c  repo.c  sha1.c  submodule.c
src/main/h/gut/: config.h  cred_helper.h  delta.h  diff.h  export.h  ignore.h  index.h  known_hosts.h  leech.h  login.h  object.h  odb.h  oid.h  pack.h  remote.h  repo.h  sha1.h  submodule.h  types.h
